--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
   <main id="main">
     <section>
       <h1>HiLu Piano Tuning and Repair</h1>
-      <p>Providing piano and harpsichord services to the Twin Cities from Lake Minnetonka to the St. Croix River.</p>
+      <p>Providing fully vaccinated piano and harpsichord services to the Twin Cities from Lake Minnetonka to the St. Croix River.</p>
     </section>
     <section id="about" class="clearfix">
       <h2>About</h2>
-      <p><img src="bhd.jpeg" alt="Hoyt tuning a piano." class="img-circle" />My name is Hoyt Drayer, and I am a member of the Piano Technician&rsquo;s Guild. I started tuning and regulating my own piano four years ago, and am now turning that skill into a career. I have a bachelor&rsquo;s degree in commercial music from Millikin University, where I majored in 'cello and vocal performance plus studio technology. I made the Twin Cities my home in 2013, and thanks to 8 years of driving buses throughout the Metro, I can find my way to any piano from Lake Minnetonka to to the St. Croix river.</p>
+      <p><img src="bhd.jpeg" alt="Hoyt tuning a piano." class="img-circle" />Hoyt Drayer is a member of the Piano Technician&rsquo;s Guild. He started tuning and regulating his own piano four years ago, and is now turning that skill into a career. He has a bachelor&rsquo;s degree in commercial music from Millikin University, where he majored in 'cello and vocal performance plus studio technology. He made the Twin Cities home in 2013, and thanks to 8 years of driving buses throughout the Metro, he can find his way to any piano from Lake Minnetonka to to the St. Croix river.</p>
       <h3>Introduction to my mentor</h3>
-      <p>Ron Poire served as head piano technician at the University of Minnesota for 10 years, and has been working on pianos for more than 3 decades. Since he cannot drive, I take him to his appointments, and he is helping me master the art of aural tuning, both for pianos and baroque keyboard instruments. Once I earn my RPT title, I will continue to take him to his appointments and schedule mine around his until he retires. In the meantime, he'll probably accompany me to your appointment.</p>
+      <p>Ron Poire served as head piano technician at the University of Minnesota for 10 years, and has been working on pianos for more than 4 decades. Since he cannot drive, Hoyt takes him to his appointments, and he is helping Hoyt master the art of aural tuning, both for pianos and baroque keyboard instruments. Once Hoyt earns his RPT title, he will continue to take Ron to his appointments until he retires. In the meantime, he'll probably accompany Hoyt to your appointment.</p>
 
       <p>
         <a href="tel:+16123241881" class="link-action">Call 612-324-1881</a>
@@ -64,24 +64,24 @@
           <h3>Tuning</h3>
           <p><strong>Electronic $100, Aural $150</strong></p>
           <h4>Seasonal discount</h4>
-          <p>Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperatures shift is to have it tuned every 3 months. Therefore, I offer a cumulative discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged the 4<sup>th</sup> tuning rate.</p>
+          <p>Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a cumulative discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged the 4<sup>th</sup> tuning rate.</p>
         </article>
 
         <article>
           <h3>Hammer reshaping</h3>
-          <p><strong>$100</strong></p>
+          <p><strong>$150</strong></p>
           <p>If your piano has been played for many years without any maintenance on the hammers, the heads get compacted and flattened where they strike the strings. Deep grooves at the strike points can dramatically alter the piano&#39;s tone. Reshaping will restore the attack and reduce stress on the hammer shanks, especially on grands, where the mute pedal shifts the hammers to one side and the grooves in the felt can subject the shanks to undue stress.</p>
         </article>
 
         <article>
           <h3>Basic regulation</h3>
-          <p><strong>$150</strong></p>
+          <p><strong>$200</strong></p>
           <p>As hammers get compacted through use, especially in the middle of the keyboard where the keys get played the most, the hammers wind up traveling farther to hit the string, altering touch and reducing responsiveness, especially when playing softly. Adjusting the let-off and drop will make your piano easier to play through a wider dynamic range, making the experience of playing your piano more rewarding, like driving an older car with new suspension and tires.</p>
         </article>
 
         <article>
           <h3>Voicing</h3>
-          <p><strong>$150</strong></p>
+          <p><strong>$200</strong></p>
           <p>All pianos get brighter the more they get played. Every keystroke makes the hammer felts harder, making the tone brighter. Voicing the hammers back down restores a softer attack when played gently, while still allowing a brighter attack when played hard. Expand your piano&#39;s expressive possibilities by having it voiced. This applies to new pianos too. Most American builders ship their pianos with hard hammers, as it&#39;s easier for a technician to voice it down in the field.</p>
         </article>
 
@@ -102,7 +102,7 @@
 
     <section id="history" class="clearfix">
       <h2>Why HiLu</h2>
-      <p><img src="hilu.jpeg" alt="HiLu lounging in a chair in the 1950s." class="img-circle" />HiLu was my great grandmother&#39;s nickname, whose actual name was Lucille Gilbert. She was a talented pianist who gave up a concert career to raise my grandfather and his older sister. Her husband was surprised to find out after the wedding that she had a $900 (in 1920s dollars) debt for a Mason and Hamlin piano she had recently bought.</p>
+      <p><img src="hilu.jpeg" alt="HiLu lounging in a chair in the 1950s." class="img-circle" />HiLu was my great grandmother&#39;s nickname, whose actual name was Lucille Gilbert. She was a talented pianist in the 20s. Her husband was surprised to find out after the wedding that she had a $900 (in 1919 dollars) debt for a Mason and Hamlin upright piano she had recently bought.</p>
       <p>She taught two generations of piano students on that instrument. With the permission of her descendents, including the one who coined her nickname, I have named my business in honor of the best pianist in my family. My goal is to make every piano I tune enjoyable for HiLu to play.</p>
     </section>
 
