--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <div class="cards">
         <article>
           <h3>Tuning</h3>
-          <p><strong>Electronic $100, Aural $150</strong></p>
+          <p><strong>Full Service $200, </strong></p>
           <h4>Seasonal discount</h4>
-          <p>Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a cumulative discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged the 4<sup>th</sup> tuning rate.</p>
+          <p>Includes pitch raise, cleaning inside of case, and minor repairs. Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a cumulative discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged $100 per tuning.<sup>th</sup> tuning rate.</p>
         </article>
 
         <article>
