--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
         <article>
           <h3>Tuning</h3>
           <p><strong>Full Service $200, </strong></p>
-          <h4>Seasonal discount</h4>
-          <p>Includes pitch raise, cleaning inside of case, and minor repairs. Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a cumulative discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged $100 per tuning.<sup>th</sup> tuning rate.</p>
+          <p>Includes pitch raise, cleaning inside of case, and minor repairs. Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a cumulative discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged $100 per tuning.</p>
         </article>
 
         <article>
