--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="#about">About</a>
       <a href="#rates">Rates</a>
       <a href="#history">History</a>
-      <a href="tel:+16123241881" class="link-action"><span class="no-mobile">Call or Text</span>612-324-1881</a>
+      <a href="tel:+16123241881" class="link-action"><span class="no-mobile">Call or Text </span>612-324-1881</a>
     </nav>
   </header>
 
@@ -108,7 +108,7 @@
   </main>
 
   <footer>
-    <p>HiLu Piano Tuning and Repair <a href="tel:+16123241881" class="link-action"><span class="no-mobile">Call </span>612-324-1881</a></p>
+    <p>HiLu Piano Tuning and Repair <a href="tel:+16123241881" class="link-action"><span class="no-mobile">Call or Text </span>612-324-1881</a></p>
   </footer>
 </body>
 </html>
