--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p>Ron Poire served as head piano technician at the University of Minnesota for 10 years, and has been working on pianos for more than 4 decades. Since he cannot drive, Hoyt takes him to his appointments, and he is helping Hoyt master the art of aural tuning, both for pianos and baroque keyboard instruments. Once Hoyt earns his RPT title, he will continue to take Ron to his appointments until he retires. In the meantime, he'll probably accompany Hoyt to your appointment.</p>
 
       <p>
-        <a href="tel:+16123241881" class="link-action">Call 612-324-1881</a>
+        <a href="tel:+16123241881" class="link-action">Call or Text 612-324-1881</a>
       </p>
     </section>
 
