--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <div class="cards">
         <article>
           <h3>Tuning</h3>
-          <p><strong>Full Service $200, </strong></p>
-          <p>Includes pitch raise, cleaning inside of case, and minor repairs. Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a cumulative discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged $100 per tuning.</p>
+          <p><strong>Full Service $200 </strong></p>
+          <p>Includes pitch raise, cleaning inside of case, and minor repairs. Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a 4-season discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged $140 per tuning.</p>
         </article>
 
         <article>
