--- a/index.html
+++ b/index.html
@@ -67,33 +67,33 @@
         </article>
 
         <article>
-          <h3>Hammer reshaping</h3>
-          <p><strong>$150</strong></p>
-          <p>If your piano has been played for many years without any maintenance on the hammers, the heads get compacted and flattened where they strike the strings. Deep grooves at the strike points can dramatically alter the piano&#39;s tone. Reshaping will restore the attack and reduce stress on the hammer shanks, especially on grands, where the mute pedal shifts the hammers to one side and the grooves in the felt can subject the shanks to undue stress.</p>
+          <h3>Piano Spa Day</h3>
+          <p><strong>$600</strong></p>
+          <p>If your piano hasn't had any maintenance other than tuning for many years, it's going to need a combination of hammer reshaping, regulation, and repairs. Instead of listing out specific jobs, I'll do whatever your piano needs in one day of work to make it play and sound better.</p>
         </article>
 
         <article>
-          <h3>Basic regulation</h3>
-          <p><strong>$200</strong></p>
-          <p>As hammers get compacted through use, especially in the middle of the keyboard where the keys get played the most, the hammers wind up traveling farther to hit the string, altering touch and reducing responsiveness, especially when playing softly. Adjusting the let-off and drop will make your piano easier to play through a wider dynamic range, making the experience of playing your piano more rewarding, like driving an older car with new suspension and tires.</p>
+          <h3>Piano Spa Duet</h3>
+          <p><strong>$1000</strong></p>
+          <p>Want more work done? Ask me to bring my mentor along, and with two technicians working on your piano, we can get more done in one day.</p>
         </article>
 
         <article>
           <h3>Voicing</h3>
-          <p><strong>$200</strong></p>
+          <p><strong>$100</strong></p>
           <p>All pianos get brighter the more they get played. Every keystroke makes the hammer felts harder, making the tone brighter. Voicing the hammers back down restores a softer attack when played gently, while still allowing a brighter attack when played hard. Expand your piano&#39;s expressive possibilities by having it voiced. This applies to new pianos too. Most American builders ship their pianos with hard hammers, as it&#39;s easier for a technician to voice it down in the field.</p>
         </article>
 
         <article>
-          <h3>Repairs</h3>
-          <p><strong>Varies</strong></p>
-          <p>Quote provided at appointment</p>
+          <h3>Heavy Repairs</h3>
+          <p><strong>Quote Provided at appointment</strong></p>
+          <p>If your piano requires more than a couple days of work, it's best to have either the action or the whole piano to my shop. Examples include full restringing, replacing tuning pins, or rebuilding actions.</p>
         </article>
 
         <article>
-          <h3>Baroque instrument servicing</h3>
-          <p><strong>Varies</strong></p>
-          <p>Tuning, regulating and voicing harpsichords and clavichords.</p>
+          <h3>Harpsichord Tuning</h3>
+          <p><strong>$200</strong></p>
+          <p>Tuning, regulating and voicing harpsichords and clavichords. Discounts provided if your harpsichord has only one manual.</p>
         </article>
       </div>
 
