--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <article>
           <h3>Voicing</h3>
           <p><strong>$100</strong></p>
-          <p>All pianos get brighter the more they get played. Every keystroke makes the hammer felts harder, making the tone brighter. Voicing the hammers back down restores a softer attack when played gently, while still allowing a brighter attack when played hard. Expand your piano&#39;s expressive possibilities by having it voiced. This applies to new pianos too. Most American builders ship their pianos with hard hammers, as it&#39;s easier for a technician to voice it down in the field.</p>
+          <p>All pianos get brighter the more they get played. Every keystroke makes the hammer felts harder and digs grooves in the hammers at the contact point, altering the tone. Reshaping and voicing restores a softer attack when played gently, while still allowing a brighter attack when played hard. Expand your piano&#39;s expressive possibilities by having it voiced.</p>
         </article>
 
         <article>
           <h3>Heavy Repairs</h3>
           <p><strong>Quote Provided at appointment</strong></p>
-          <p>If your piano requires more than a couple days of work, it's best to have either the action or the whole piano to my shop. Examples include full restringing, replacing tuning pins, or rebuilding actions.</p>
+          <p>If your piano requires more than a couple days of work, it's best to take either the action or the whole piano to my shop. Examples include full restringing, replacing tuning pins, or rebuilding actions.</p>
         </article>
 
         <article>
