--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
   <main id="main">
     <section>
       <h1>HiLu Piano Tuning and Repair</h1>
-      <p>Providing fully vaccinated piano and harpsichord services to the Twin Cities from Lake Minnetonka to the St. Croix River.</p>
+      <p>Providing fully vaccinated piano and harpsichord services to the greater Twin Cities area.</p>
     </section>
     <section id="about" class="clearfix">
       <h2>About</h2>
-      <p><img src="bhd.jpeg" alt="Hoyt tuning a piano." class="img-circle" />Hoyt Drayer is a member of the Piano Technician&rsquo;s Guild. He started tuning and regulating his own piano four years ago, and is now turning that skill into a career. He has a bachelor&rsquo;s degree in commercial music from Millikin University, where he majored in 'cello and vocal performance plus studio technology. He made the Twin Cities home in 2013, and thanks to 8 years of driving buses throughout the Metro, he can find his way to any piano from Lake Minnetonka to to the St. Croix river.</p>
+      <p><img src="bhd.jpeg" alt="Hoyt tuning a piano." class="img-circle" />I'm Hoyt Drayer, member of the Piano Technician&rsquo;s Guild. I started tuning and regulating my own piano circa 2017, and am now turning that skill into a career. I have a bachelor&rsquo;s degree in commercial music from Millikin University, where I majored in 'cello and vocal performance plus studio technology. I made the Twin Cities home in 2013, and thanks to 8 years of driving buses throughout the Metro, I can find my way to any piano from Lake Minnetonka to to the St. Croix river.</p>
       <h3>Introduction to my mentor</h3>
-      <p>Ron Poire served as head piano technician at the University of Minnesota for 10 years, and has been working on pianos for more than 4 decades. Since he cannot drive, Hoyt takes him to his appointments, and he is helping Hoyt master the art of aural tuning, both for pianos and baroque keyboard instruments. Once Hoyt earns his RPT title, he will continue to take Ron to his appointments until he retires. In the meantime, he'll probably accompany Hoyt to your appointment.</p>
+      <p>Ron Poire served as head piano technician at the University of Minnesota for 10 years, and has been working on pianos for more than 4 decades. Since he cannot drive, I take him to his appointments, and he is helping me master the art of aural tuning, both for pianos and baroque keyboard instruments.</p>
 
       <p>
         <a href="tel:+16123241881" class="link-action">Call or Text 612-324-1881</a>
@@ -62,8 +62,8 @@
       <div class="cards">
         <article>
           <h3>Tuning</h3>
-          <p><strong>Full Service $200 </strong></p>
-          <p>Includes pitch raise, cleaning inside of case, and minor repairs. Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Therefore, I offer a 4-season discount for each subsequent tuning within a year of the first. Those who continue to have their piano tuned every 3 months will be charged $140 per tuning.</p>
+          <p><strong>Basic $140 Full Service $200 </strong></p>
+          <p>Basic tuning is tune and leave. Full service includes pitch raise, cleaning inside of case, and minor repairs. Minnesota&#39;s four distinct seasons are hard on pianos, and the best way to keep them in proper tune as the humidity and temperature shift is to have it tuned every 3 months. Discounts provided for frequent clients.</p>
         </article>
 
         <article>
@@ -73,15 +73,15 @@
         </article>
 
         <article>
-          <h3>Piano Spa Duet</h3>
-          <p><strong>$1000</strong></p>
-          <p>Want more work done? Ask me to bring my mentor along, and with two technicians working on your piano, we can get more done in one day.</p>
+          <h3>Piano Life Saver</h3>
+          <p><strong>$600</strong></p>
+          <p>All pianos in Minnesota should have piano life savers. Made domestically by Dampp Chaser, a piano life saver uses heating elements and a water tank to compensate for seasonal humidity swings, making tunings and pianos last longer. Remember to water your piano.</p>
         </article>
 
         <article>
-          <h3>Voicing</h3>
+          <h3>Reshaping & Voicing</h3>
           <p><strong>$100</strong></p>
-          <p>All pianos get brighter the more they get played. Every keystroke makes the hammer felts harder and digs grooves in the hammers at the contact point, altering the tone. Reshaping and voicing restores a softer attack when played gently, while still allowing a brighter attack when played hard. Expand your piano&#39;s expressive possibilities by having it voiced.</p>
+          <p>All pianos get brighter the more they get played. Every keystroke makes the hammer felts harder and pounds grooves in the hammers at the contact point, distorting the tone. Reshaping and voicing restores a softer attack when played gently, while still allowing a brighter attack when played hard. Expand your piano&#39;s expressive possibilities by having it voiced.</p>
         </article>
 
         <article>
@@ -91,9 +91,12 @@
         </article>
 
         <article>
-          <h3>Harpsichord Tuning</h3>
-          <p><strong>$200</strong></p>
-          <p>Tuning, regulating and voicing harpsichords and clavichords. Discounts provided if your harpsichord has only one manual.</p>
+          <h3>Harpsichord Service</h3>
+          <p><strong>$100 per choir</strong></p>
+          <p>Tuning, regulating and voicing harpsichords and clavichords.</p>
+          <h3>Harpsichord Action Rebuild</h3>
+          <p><strong>$2000 per choir</strong></p>
+          <p>Replacing obsolete jacks and registers to restore full functionality.</p>
         </article>
       </div>
 
