--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="#about">About</a>
       <a href="#rates">Rates</a>
       <a href="#history">History</a>
-      <a href="tel:+16123241881" class="link-action"><span class="no-mobile">Call or Text </span>612-324-1881</a>
+      <a href="https://gazelleapp.io/scheduling/XqJD7BPkF391Z6T4fL0Vrwqw" class="link-action">Book Online Now</a>
     </nav>
   </header>
 
@@ -53,6 +53,7 @@
       <p>Ron Poire served as head piano technician at the University of Minnesota for 10 years, and has been working on pianos for more than 4 decades. Since he cannot drive, I take him to his appointments, and he is helping me master the art of aural tuning, both for pianos and baroque keyboard instruments.</p>
 
       <p>
+            <a href="https://gazelleapp.io/scheduling/XqJD7BPkF391Z6T4fL0Vrwqw" class="link-action">Book Online Now</a> or 
         <a href="tel:+16123241881" class="link-action">Call or Text 612-324-1881</a>
       </p>
     </section>
